Tue Sep 12 17:12:30 BST 2000 Chris Emerson <chris.emerson@open.muscat.com>

	* The Java bindings now seem to work again, although the automatic
	  apitest converter doesn't.

Tue Sep 12 16:36:41 BST 2000  Richard Boulton <richard.boulton@open.muscat.com>

	* Removed final bits of Berkeley DB from Quartz, and conditional
	  compile around header files (which was for includetest's benefit).

	* Added yet more classes to Quartz.  Still doesn't do anything.

Tue Sep 12 16:32:30 BST 2000 Olly Betts

	* Added reference counting to an instantiation of SleepycatTermList
	  which I'd missed.
 
Tue Sep 12 15:23:09 BST 2000 Olly Betts

	* Oops, AndMaybePostList didn't compile...

Tue Sep 12 14:44:26 BST 2000 Olly Betts

	* Fixed problem with OrPostList decomposing into AndMaybePostList at
	  the very start (only happens with a percentage cut-off threshold).

Tue Sep 12 14:15:13 BST 2000 Olly Betts

	* includetest.cc now depends on findheaders.pl.

	* findheaders.pl now copes with wrapped lines in Makefile.in (cvs
	  automake leaves them wrapped - last release version unwrapped them).
	
Tue Sep 12 12:35:49 BST 2000 Olly Betts

	* *PostList and *TermList now keep a reference to their parent database
	  so they'll continue to work if all other references to the database
	  die (tested by termlist3).

Tue Sep 12 12:34:40 BST 2000 Chris Emerson <chris.emerson@open.muscat.com>

	* The Java stuff now actually compiles.

Tue Sep 12 09:21:48 BST 2000  Richard Boulton <richard.boulton@open.muscat.com>

	* Remove dependency of quartz on Berkeley DB 3.1, in configure.in

	* Small changes to quartz - added a QuartzDbTable class for managing
	  database tables.

Mon Sep 11 18:39:58 BST 2000 Chris Emerson <chris.emerson@open.muscat.com>

	* Some updates to Java half of the Java bindings.  The native half
	  still needs some fixing, as do the test classes.

Mon Sep 11 18:34:30 BST 2000  Richard Boulton <richard.boulton@open.muscat.com>
