@@ -297,6 +297,19 @@ OmIndexer::set_input(Message msg)
     start->set_message(msg);
 }
 
+void
+OmIndexer::set_node_config(const std::string &node_id,
+			   const std::string &key,
+			   const std::string &value)
+{
+    NodeMap::iterator i = nodemap.find(node_id);
+    if (i != nodemap.end()) {
+	throw OmInvalidArgumentError(std::string("Node id ") + node_id +
+				     " doesn't exist");
+    }
+    i->second->set_config_string(key, value);
+}
+
 OmIndexerBuilder::OmIndexerBuilder()
 {
     OmNodeDescriptor ndesc("START", &OmIndexerStartNode::create);
